refactor: refactor client side code

--- a/client/index.html
+++ b/client/index.html
@@ -2,34 +2,59 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
-    <title>ReVite</title>
+    <title>vwh upload</title>
     <meta name="description" content="React Vite Template" />
     <meta name="keywords" content="react, vite" />
+    <!-- Favicon and icons -->
+    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./icons/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./icons/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="./icons/android-chrome-512x512.png"
+    />
     <!-- Fonts -->
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
       as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      media="print"
-      onload="this.media='all'"
-    />
-    <noscript>
-      <link
+    <noscript
+      ><link
         rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      />
-    </noscript>
+        href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+    /></noscript>
     <!-- Critical CSS -->
     <style>
       body {
-        font-family: "Fira Mono", monospace;
+        font-family: "Lexend", sans-serif;
+        font-display: swap;
       }
       .no-js {
         text-align: center;
