feat: added noise effect

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
     <title>vwh upload</title>
-    <meta name="description" content="React Vite Template" />
-    <meta name="keywords" content="react, vite" />
+    <link rel="preload" href="/noise.webp" as="image" type="image/webp" />
     <!-- Favicon and icons -->
     <link rel="icon" href="./icons/favicon.ico" type="image/x-icon" />
     <link
